Quorum/Library/Tests/TypeChecker/Pass/InstanceTypeChildOfChild.quorum
class Main
    action Main
        A a
        boolean result = false
        if a is C
            result = true
        else
            result = false
        end
        output result
    end
end