Quorum/Library/Tests/TypeChecker/Fail/InstanceTypeUnrelatedTypes.quorum
class Main
    action Main
        A a
        boolean result
        if a is D 
            result = true
        end
        else 
            result = false
        end
    end
end